@@ -2400,6 +2400,7 @@ INSERT INTO uiconfig (section, var, value, description, disabled) VALUES
 ('userpanel','owner_stats','0','',0),
 ('userpanel','default_categories','1','',0),
 ('userpanel','auth_type','1','',0),
+('userpanel', 'show_confirmed_documents_only', 'false', '', 0),
 ('directories','userpanel_dir','userpanel','',0);
 
 INSERT INTO netdeviceproducers (id, name) VALUES
@@ -2729,4 +2730,4 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2016101000');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2016101700');
