@@ -6,26 +6,34 @@
     <TR CLASS="light"><TD CLASS="fall">
 	<FORM NAME="moduleconfig" METHOD="POST" ACTION="?m=userpanel&module=info&f=submit_setup">
 	<TABLE WIDTH="100%">
-	    <TR>
-		<TD WIDTH="1%" NOWRAP>
-		    <label for="hide_nodesbox">{trans("Hide customer nodes box:")}</label>
-		</TD>
-		<TD WIDTH="99%" NOWRAP>
-		    <INPUT type="checkbox" NAME="hide_nodesbox" ID="hide_nodesbox" value="1"{if $hide_nodesbox} checked{/if} {tip text="Don't show customer nodes box if he hasn't any nodes"}>
-    		</TD>
-	    </TR>
-	    <TR>
-		<TD WIDTH="1%" NOWRAP>
-		    {trans("Text of data processing agreement:")}
-		</TD>
-		<TD WIDTH="99%" NOWRAP>
-		    <TEXTAREA NAME="consent_text" rows="4" cols="50" {tip text="Enter text of agreement for personal data processing"}>{$consent_text}</TEXTAREA>
-    		</TD>
-	    </TR>
+		<TR>
+			<TD WIDTH="1%" NOWRAP>
+				<label for="hide_nodesbox">{trans("Hide customer nodes box:")}</label>
+			</TD>
+			<TD WIDTH="99%" NOWRAP>
+				<INPUT type="checkbox" NAME="hide_nodesbox" ID="hide_nodesbox" value="1"{if $hide_nodesbox} checked{/if} {tip text="Don't show customer nodes box if he hasn't any nodes"}>
+			</TD>
+		</TR>
+		<TR>
+			<TD WIDTH="1%" NOWRAP>
+				<label for="show_confirmed_documents_only">{trans("Show confirmed documents only:")}</label>
+			</TD>
+			<TD WIDTH="99%" NOWRAP>
+				<INPUT type="checkbox" NAME="show_confirmed_documents_only" ID="show_confirmed_documents_only" value="1"{if $show_confirmed_documents_only} checked{/if} {tip text="Show only documents which are confirmed"}>
+			</TD>
+		</TR>
+		<TR>
+			<TD WIDTH="1%" NOWRAP>
+				{trans("Text of data processing agreement:")}
+			</TD>
+			<TD WIDTH="99%" NOWRAP>
+				<TEXTAREA NAME="consent_text" rows="4" cols="50" {tip text="Enter text of agreement for personal data processing"}>{$consent_text}</TEXTAREA>
+			</TD>
+		</TR>
 	</TABLE>
 	<p align="right">
-	    <A HREF="?m=userpanel">{trans("Cancel")} <IMG SRC="img/cancel.gif" ALT=""></A>
-	    <A HREF="javascript:document.moduleconfig.submit();" ACCESSKEY="S">{trans("Submit")} <IMG SRC="img/save.gif" ALT=""></A>
+		<A HREF="?m=userpanel">{trans("Cancel")} <IMG SRC="img/cancel.gif" ALT=""></A>
+		<A HREF="javascript:document.moduleconfig.submit();" ACCESSKEY="S">{trans("Submit")} <IMG SRC="img/save.gif" ALT=""></A>
 	</p>
 	</FORM>
     </TD></TR>
