@@ -2,6 +2,9 @@ $Id$
 
 version ?.??.?? (????-??-??):
 
+  - userpanel enhancement: show confirmed documents only checkbox decides if confirmed
+    documents are only shown for customer [chilan]
+
 version 1.11.21 (2016-10-14):
 
   - added support for DSN and MDN in lms-notify.php script [chilan]
